[package]
name = "dione"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
bitutils = "3.0.1"
getopts = "0.2.21"
itertools = "0.11.0"
nom = "7.1.3"
phf = { version = "0.11", features = ["macros"] }
spin = "0.9.8"
